--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,7 @@
       content="Timathon CodeJam Project by Doflamingo"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -39,12 +40,13 @@
         display: grid;
         place-items: center;
         height: 100vh;
-        background: black;
+        background: white;
+        border-radius: 4px;
       }
 
       .loader {
-        border: 16px solid #f3f3f3;
-        border-top: 16px solid #3498db;
+        border: 16px solid #000;
+        border-top: 16px solid #fff;
         border-radius: 50%;
 
         width: 130px;
